# dlpgen-opt

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Makefile  README.md  merge.py  pyproject.toml  submit.py
.github/workflows/: release-image.yml
configs/: production.bnb_icarus.yaml  production.bnb_sbnd.yaml  production.example.yaml  production.genie-smoke.yaml  production.sbn.yaml  production.smoke.yaml
configs/dlpgen/: baseline.yaml  baseline_sbn.yaml
configs/genie/: bnb_icarus.yaml  bnb_sbnd.yaml
configs/geometry/: lar_vat.gdml
configs/slurm/: s3df.yaml
configs/supera/: lar_dune.yaml  lar_sbn.yaml  lar_vat.yaml
dependencies/: versions.yaml
docker/: entrypoint.sh
docker/patches/: genie-dkmeta-output.patch
docs/: architecture.md  configuration.md  implementation-plan.md
src/dlpgen_opt/: __init__.py  artifacts.py  cli.py  config.py  dlpgen_build.py  genie_cli.py  layout.py  pipeline.py  provenance.py  rootracker.py  runner.py  slurm.py  supera_cli.py  validation.py
src/dlpgen_opt/sources/: __init__.py  base.py  dlpgen.py  genie.py
tests/: conftest.py  test_config.py  test_default_geometry.py  test_dlpgen_build.py  test_dlpgen_source.py  test_genie_source.py  test_merge.py  test_pipeline.py  test_runner.py  test_slurm.py  test_standalone_submit.py
