[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlpgen-opt"
version = "0.1.0"
description = "Reproducible DLPGenerator to edep-sim to Supera production orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.scripts]
dlpgen-opt = "dlpgen_opt.cli:main"
sim-production = "dlpgen_opt.cli:main"
dlpgen-opt-supera = "dlpgen_opt.supera_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
